syntax = "proto3";

package water_delivery;

option go_package = "github.com/Pasca11/grpcServer/proto/gen;water_delivery";

// Сервис доставки воды
service WaterDeliveryService {
  // Создание заказа
  rpc CreateOrder(OrderRequest) returns (OrderResponse) {}
  // Получение статуса заказа
  rpc GetOrderStatus(OrderStatusRequest) returns (OrderStatusResponse) {}
}

// Запрос на создание заказа
message OrderRequest {
  string customer_name = 1;
  string delivery_address = 2;
  int32 bottles_count = 3;
  string phone_number = 4;
  
  // Массив тяжелых структур для тестирования производительности
  repeated PerformanceTestData test_data = 5;
}

// Тяжелая структура данных для нагрузочного тестирования
message PerformanceTestData {
  string text_field = 1;
  bytes binary_data = 2;
  double numeric_value = 3;
  int64 timestamp = 4;
  repeated string string_array = 5;
  repeated int32 int_array = 6;
  bytes image_data = 7;
  string long_text = 8;
}

// Ответ на создание заказа
message OrderResponse {
  string order_id = 1;
  string estimated_delivery_time = 2;
}

// Запрос статуса заказа
message OrderStatusRequest {
  string order_id = 1;
}

// Ответ со статусом заказа
message OrderStatusResponse {
  enum Status {
    PENDING = 0;
    CONFIRMED = 1;
    IN_DELIVERY = 2;
    DELIVERED = 3;
    CANCELLED = 4;
  }
  Status status = 1;
  string status_description = 2;
} 